# insurance_service

./: .gitignore  Dockerfile  README.md  akhq.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: e5c97c7c99c4_tables_created.py
data/: rates.json
insurance_app/: kafka_producer.py  logger.py  main.py
insurance_app/api/api_v1/: __init__.py
insurance_app/api/api_v1/rates/: crud.py  schemas.py  views.py
insurance_app/core/: config.py
insurance_app/core/models/: __init__.py  base.py  db_helper.py  rate.py
